# claude-dcp

./: LICENSE  README.md  config.json  pyproject.toml
.claude-plugin/: plugin.json
hooks/: hooks.json
scripts/: context-nudge.sh  context_nudge.py  context_report.py  dedup-check.sh  dedup_check.py  lib.py  lib.sh  log-error.sh  log-tool-call.sh  log_error.py  log_tool_call.py  post-compact-reminder.sh  post_compact_reminder.py  pre-compact-optimize.py  pre-compact-optimize.sh  session-cleanup.sh  session_cleanup.py  sweep_report.py  track_turn.py
skills/dcp-context/: SKILL.md
skills/dcp-sweep/: SKILL.md
tests/: conftest.py  test_config_and_main.py  test_context_report.py  test_dedup_check.py  test_estimate_tokens.py  test_normalize.py  test_optimizer.py  test_savings_tracking.py  test_signatures.py  test_sweep_report.py  test_track_turn.py  test_transcript_parser.py
tests/fixtures/: transcript_basic.jsonl  transcript_malformed.jsonl  transcript_with_dupes.jsonl  transcript_with_errors.jsonl
